Fixes white space underneath background when zooming out

--- a/frontend/src/assets/styles.css
+++ b/frontend/src/assets/styles.css
@@ -3,7 +3,14 @@
     padding: 0;
 }
 
+body {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+}
+
 #root {
-    height: 100%;
+    flex: 1;
     width: 100%;
 }
